# ProtoChat

./: .gitignore  ChatAppQuic.sln  README.md
.github/workflows/: docker-publish.yml
Client/: Client.csproj  IRequestHandler.cs  IResponseHandler.cs  Program.cs  RequestHandler.cs  ResponseHandler.cs  publish.ps1
ProtoLibrary/: DataTypeConversionExtensions.cs  Protos.csproj
Protos/: AssemblyInfo.cs  Dockerfile  Protos.csproj  dataTypes.proto  request.proto  response.proto  session.proto
Service/: ChatAppQuicService.cs  ClientList.cs  ClientServicer.cs  Dockerfile  GlobalSuppressions.cs  IClientList.cs  IClientServicer.cs  Program.cs  Service.csproj
Service/Properties/: launchSettings.json
rust_client/: Cargo.toml  build.rs
rust_client/src/: main.rs
