[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
prost = "0.11.8"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
tokio-stream = "*"
tonic = "*"

[build-dependencies]
tonic-build = "*"
